WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86672
GC is not thread-safe when moving values between C stacks
https://bugs.webkit.org/show_bug.cgi?id=86672
Summary
GC is not thread-safe when moving values between C stacks
Geoffrey Garen
Reported
2012-05-16 13:59:13 PDT
GC is not thread-safe when moving values between C stacks
Attachments
Patch
(3.03 KB, patch)
2012-05-16 14:04 PDT
,
Geoffrey Garen
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2012-05-16 14:04:19 PDT
Created
attachment 142340
[details]
Patch
Geoffrey Garen
Comment 2
2012-05-16 14:05:19 PDT
Comment on
attachment 142340
[details]
Patch Phil reviewed this.
Geoffrey Garen
Comment 3
2012-05-16 14:05:56 PDT
Committed
r117340
: <
http://trac.webkit.org/changeset/117340
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug