GC is not thread-safe when moving values between C stacks https://bugs.webkit.org/show_bug.cgi?id=86672

Reviewed by Phil Pizlo.

GC pauses thread A while marking thread A, and then B while marking B,
which isn't safe against A and B moving values between each others'
stacks.

This is a theoretical bug -- I haven't been able to reproduce it
in the wild.

* heap/MachineStackMarker.cpp:
(JSC::MachineThreads::gatherFromOtherThread):
(JSC::MachineThreads::gatherConservativeRoots): Pause all C stacks for the
duration of stack marking, to avoid missing values that might be moving
between C stacks.


Canonical link: https://commits.webkit.org/104258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117340 268f45cc-cd09-0410-ab3c-d52691b4dbfc